# hangman_ocaml

./: README.md  dune-project
lib/: dune  hangman_logic.ml  hangman_logic.mli
test/: dune
